...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="co.infinum.skliba.BoatIt.activities.DetailsActivity">

    <ImageView
        android:id="@+id/details_picture"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:scaleType="centerCrop" />

    <LinearLayout
...
                android:layout_width="1dp"
                android:layout_height="35dp"
                android:background="#ffffff"
                android:padding="7dp" />

            <Button
                android:id="@+id/button_downboat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:color/transparent"
                android:text="@string/downboatButtonText"
                android:textColor="@android:color/white" />
...
