...

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/login_username"
                        style="@style/LoginInput"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="15dp"
                        android:hint="@string/hintUsername"

...

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/login_password"
                        style="@style/LoginInput"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hintPassword"
                        android:textColorHint="#ffffff"/>

...
