<resources>
    <string name="app_name">Zadatak5</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_boats">BoatsActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="buttonLoginText">LOGIN</string>
</resources>
